<resources>
    <string name="app_name">MarkFace</string>

    <string name="title">Escreva uma noticia</string>
    <string name="hint_title">Título</string>
    <string name="hint_new">Escreva sua noticia</string>
    <string name="hint_date">Data de publicação</string>
    <string name="hint_author">Autor</string>
    <string name="button_publish">Publicar Notícia</string>
    <string name="button_view">Vizualizar Notícia</string>
    <string name="image">image</string>
</resources>