<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".PublishActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:paddingTop="50dp"
        />

    <EditText
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title"
        android:maxLines="1"
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/textNews"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:hint="@string/hint_new"
        android:padding="15dp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/textDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:maxLines="1"
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/textAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_author"
        android:maxLines="1"
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/buttonPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/button_publish"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_700"
        tools:ignore="TextContrastCheck"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/buttonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/button_view"
        android:textColor="@color/white"
        android:backgroundTint="@color/teal_700"
        tools:ignore="TextContrastCheck"
        android:textAllCaps="false"/>

</LinearLayout>
</ScrollView>